--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -45,4 +45,13 @@ color: white;
     background-color: #e2e5ff;
     border:none
  }
-
+.horizontal-scroll {
+  overflow-x: auto;
+  overflow-y: hidden;
+  white-space: nowrap;
+  scroll-behavior: smooth;
+}
+.scrollbar-hide {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
